0028657: Foundation Classes - OSD_Thread does not release thread resources on non-Windows platforms

~OSD_Thread(), OSD_Thread::SetFunction() and OSD_Thread::Run()
now detach old thread also on platforms using pthreads.
OSD_Thread::Wait() now closes thread handle after joining.