src/OSD/OSD_Thread.cxx
@@ -13,7 +13,6 @@
 // Alternatively, this file may be used under the terms of Open CASCADE
 // commercial license or contractual agreement.
 
-
 #include <OSD_Thread.hxx>
 
 //=============================================
@@ -47,54 +46,35 @@ OSD_Thread::OSD_Thread (const OSD_Thread &other)
 
 void OSD_Thread::Assign (const OSD_Thread &other)
 {
-  // copy function pointer 
+  // copy function pointer
   myFunc = other.myFunc;
   myPriority = other.myPriority;
 
+  // detach current thread
+  Detach();
+
 #ifdef _WIN32
-
-  // On Windows, close current handle 
-  if ( myThread ) 
-    CloseHandle ( myThread );
-  myThread = 0;
-
-  // and replace it by duplicate of the source handle 
+  // duplicate the source handle
   if ( other.myThread ) {
     HANDLE hProc = GetCurrentProcess(); // we are always within the same process
     DuplicateHandle ( hProc, other.myThread, hProc, &myThread,
 		      0, TRUE, DUPLICATE_SAME_ACCESS );
   }
-
 #else
-
   // On Unix/Linux, just copy the thread id
   myThread = other.myThread;
-
-#endif  
+#endif
 
   myThreadId = other.myThreadId;
 }
 
 //=============================================
-// OSD_Thread::Destroy
+// OSD_Thread::~OSD_Thread
 //=============================================
 
-void OSD_Thread::Destroy ()
+OSD_Thread::~OSD_Thread()
 {
-#ifdef _WIN32
-
-  // On Windows, close current handle 
-  if ( myThread ) 
-    CloseHandle ( myThread );
-
-#else
-
-  // On Unix/Linux, do nothing
-
-#endif  
-
-  myThread = 0;
-  myThreadId = 0;
+  Detach();
 }
 
 //=============================================
@@ -118,7 +98,7 @@ void OSD_Thread::SetPriority (const Standard_Integer thePriority)
 void OSD_Thread::SetFunction (const OSD_ThreadFunction &func)
 {
   // close current handle if any
-  Destroy();
+  Detach();
   myFunc = func;
 }
 
@@ -141,7 +121,7 @@ static DWORD WINAPI WNTthread_func (LPVOID data)
 }
 #endif
 
-Standard_Boolean OSD_Thread::Run (const Standard_Address data, 
+Standard_Boolean OSD_Thread::Run (const Standard_Address data,
 #ifdef _WIN32
                                   const Standard_Integer WNTStackSize
 #else
@@ -151,14 +131,10 @@ Standard_Boolean OSD_Thread::Run (const Standard_Address data,
 {
   if ( ! myFunc ) return Standard_False;
 
-  myThreadId = 0;
+  // detach current thread, if open
+  Detach();
 
 #ifdef _WIN32
-
-  // On Windows, close current handle if open
-  if ( myThread ) 
-    CloseHandle ( myThread );
-  myThread = 0;
 
   // allocate intermediate data structure to pass both data parameter and address
   // of the real thread function to Windows thread wrapper function
@@ -167,8 +143,8 @@ Standard_Boolean OSD_Thread::Run (const Standard_Address data,
   adata->data = data;
   adata->func = myFunc;
 
-  // then try to create a new thread 
-  
+  // then try to create a new thread
+
   myThread = CreateThread ( NULL, WNTStackSize, WNTthread_func,
                             adata, 0, &myThreadId );
   if ( myThread )
@@ -180,12 +156,15 @@ Standard_Boolean OSD_Thread::Run (const Standard_Address data,
 
 #else
 
-  // On Unix/Linux, create a new thread
-  if ( pthread_create ( &myThread, 0, myFunc, data ) )
+  if (pthread_create (&myThread, 0, myFunc, data) != 0)
+  {
     myThread = 0;
-  else myThreadId = myThread;
-
-#endif  
+  }
+  else
+  {
+    myThreadId = myThread;
+  }
+#endif
   return myThread != 0;
 }
 
@@ -197,17 +176,17 @@ void OSD_Thread::Detach ()
 {
 #ifdef _WIN32
 
-  // On Windows, close current handle 
-  if ( myThread ) 
+  // On Windows, close current handle
+  if ( myThread )
     CloseHandle ( myThread );
 
 #else
 
   // On Unix/Linux, detach a thread
-  if ( myThread ) 
+  if ( myThread )
     pthread_detach ( myThread );
 
-#endif  
+#endif
 
   myThread = 0;
   myThreadId = 0;
@@ -217,63 +196,74 @@ void OSD_Thread::Detach ()
 // OSD_Thread::Wait
 //=============================================
 
-Standard_Boolean OSD_Thread::Wait () const
-{
-  Standard_Address aRes = 0;
-  return Wait ( aRes );
-}
-
-//=============================================
-// OSD_Thread::Wait
-//=============================================
-
-Standard_Boolean OSD_Thread::Wait (Standard_Address &result) const
+Standard_Boolean OSD_Thread::Wait (Standard_Address& theResult)
 {
   // check that thread handle is not null
-  result = 0;
-  if ( ! myThread ) 
+  theResult = 0;
+  if (!myThread)
+  {
     return Standard_False;
+  }
 
 #ifdef _WIN32
-
   // On Windows, wait for the thread handle to be signaled
-  if ( WaitForSingleObject ( myThread, INFINITE ) != WAIT_OBJECT_0 ) 
+  if (WaitForSingleObject (myThread, INFINITE) != WAIT_OBJECT_0)
+  {
     return Standard_False;
+  }
 
   // and convert result of the thread execution to Standard_Address
   DWORD anExitCode;
-  if ( GetExitCodeThread ( myThread, &anExitCode ) )
-    result = ULongToPtr (anExitCode);
+  if (GetExitCodeThread (myThread, &anExitCode))
+  {
+    theResult = ULongToPtr (anExitCode);
+  }
+
+  CloseHandle (myThread);
+  myThread   = 0;
+  myThreadId = 0;
   return Standard_True;
-
 #else
-
   // On Unix/Linux, join the thread
-  return ! pthread_join ( myThread, &result );
+  if (pthread_join (myThread, &theResult) != 0)
+  {
+    return Standard_False;
+  }
 
-#endif  
+  myThread   = 0;
+  myThreadId = 0;
+  return Standard_True;
+#endif
 }
 
 //=============================================
 // OSD_Thread::Wait
 //=============================================
 
-Standard_Boolean OSD_Thread::Wait (const Standard_Integer theTimeMs, Standard_Address &result) const
+Standard_Boolean OSD_Thread::Wait (const Standard_Integer theTimeMs,
+                                   Standard_Address& theResult)
 {
   // check that thread handle is not null
-  result = 0;
-  if ( ! myThread ) 
+  theResult = 0;
+  if (!myThread)
+  {
     return Standard_False;
+  }
 
 #ifdef _WIN32
-
   // On Windows, wait for the thread handle to be signaled
   DWORD ret = WaitForSingleObject (myThread, theTimeMs);
   if (ret == WAIT_OBJECT_0)
   {
     DWORD anExitCode;
-    if ( GetExitCodeThread ( myThread, &anExitCode ) )
-      result = ULongToPtr (anExitCode);
+    if (GetExitCodeThread (myThread, &anExitCode))
+    {
+      theResult = ULongToPtr (anExitCode);
+    }
+
+    CloseHandle (myThread);
+    myThread   = 0;
+    myThreadId = 0;
     return Standard_True;
   }
   else if (ret == WAIT_TIMEOUT)
@@ -282,7 +272,6 @@ Standard_Boolean OSD_Thread::Wait (const Standard_Integer theTimeMs, Standard_Ad
   }
 
   return Standard_False;
-
 #else
   #if defined(__GLIBC__) && defined(__GLIBC_PREREQ)
     #if __GLIBC_PREREQ(2,4)
@@ -302,13 +291,22 @@ Standard_Boolean OSD_Thread::Wait (const Standard_Integer theTimeMs, Standard_Ad
     aTimeout.tv_sec  += aSeconds;
     aTimeout.tv_nsec += aMicroseconds * 1000;
 
-    return pthread_timedjoin_np (myThread, &result, &aTimeout) == 0;
+    if (pthread_timedjoin_np (myThread, &theResult, &aTimeout) != 0)
+    {
+      return Standard_False;
+    }
+
   #else
     // join the thread without timeout
     (void )theTimeMs;
-    return pthread_join (myThread, &result) == 0;
+    if (pthread_join (myThread, &theResult) != 0)
+    {
+      return Standard_False;
+    }
   #endif
-
+    myThread   = 0;
+    myThreadId = 0;
+    return Standard_True;
 #endif
 }
 
@@ -325,12 +323,11 @@ Standard_ThreadId OSD_Thread::GetId () const
 // OSD_Thread::Current
 //=============================================
 
-Standard_ThreadId OSD_Thread::Current () 
+Standard_ThreadId OSD_Thread::Current ()
 {
 #ifdef _WIN32
   return GetCurrentThreadId();
 #else
   return pthread_self();
-#endif  
+#endif
 }
-
