src/OSD/OSD_Thread.hxx
@@ -30,49 +30,43 @@
 
 //! A simple platform-intependent interface to execute
 //! and control threads.
-class OSD_Thread 
+class OSD_Thread
 {
 public:
 
   DEFINE_STANDARD_ALLOC
 
-  
   //! Empty constructor
   Standard_EXPORT OSD_Thread();
-  
+
   //! Initialize the tool by the thread function
   //!
   //! Note: On Windows, you might have to take an address of the thread
   //! function explicitly to pass it to this constructor without compiler error
   Standard_EXPORT OSD_Thread(const OSD_ThreadFunction& func);
-  
+
   //! Copy constructor
   Standard_EXPORT OSD_Thread(const OSD_Thread& other);
-  
+
   //! Copy thread handle from other OSD_Thread object.
   Standard_EXPORT void Assign (const OSD_Thread& other);
 void operator = (const OSD_Thread& other)
 {
   Assign(other);
 }
-  
-  //! Destructor. On Windows, closes handle to the thread.
-  //! On UNIX/Linux, does nothing.
-  Standard_EXPORT void Destroy();
-~OSD_Thread()
-{
-  Destroy();
-}
-  
+
+  //! Destructor. Detaches the thread if it wasn't done already.
+  Standard_EXPORT ~OSD_Thread();
+
   Standard_EXPORT void SetPriority (const Standard_Integer thePriority);
-  
+
   //! Initialize the tool by the thread function.
   //! If the current thread handle is not null, nullifies it.
   //!
   //! Note: On Windows, you might have to take an address of the thread
   //! function explicitly to pass it to this method without compiler error
   Standard_EXPORT void SetFunction (const OSD_ThreadFunction& func);
-  
+
   //! Starts a thread with thread function given in constructor,
   //! passing the specified input data (as void *) to it.
   //! The parameter \a WNTStackSize (on Windows only)
@@ -80,7 +74,7 @@ void operator = (const OSD_Thread& other)
   //! (by default - the same as for the current executable).
   //! Returns True if thread started successfully
   Standard_EXPORT Standard_Boolean Run (const Standard_Address data = 0, const Standard_Integer WNTStackSize = 0);
-  
+
   //! Detaches the execution thread from this Thread object,
   //! so that it cannot be waited.
   //! Note that mechanics of this operation is different on
@@ -89,9 +83,14 @@ void operator = (const OSD_Thread& other)
   //! However, the purpose is the same: to instruct the system to
   //! release all thread data upon its completion.
   Standard_EXPORT void Detach();
-  
-  Standard_EXPORT Standard_Boolean Wait() const;
-  
+
+  //! Waits till the thread finishes execution.
+  Standard_Boolean Wait()
+  {
+    Standard_Address aRes = 0;
+    return Wait (aRes);
+  }
+
   //! Wait till the thread finishes execution.
   //! Returns True if wait was successful, False in case of error.
   //!
@@ -101,45 +100,27 @@ void operator = (const OSD_Thread& other)
   //! Note however that it is advisable not to rely upon returned result
   //! value, as it is not always the value actually returned by the thread
   //! function. In addition, on Windows it is converted via DWORD.
-  Standard_EXPORT Standard_Boolean Wait (Standard_Address& result) const;
-  
+  Standard_EXPORT Standard_Boolean Wait (Standard_Address& theResult);
+
   //! Waits for some time and if the thread is finished,
   //! it returns the result.
   //! The function returns false if the thread is not finished yet.
-  Standard_EXPORT Standard_Boolean Wait (const Standard_Integer time, Standard_Address& result) const;
-  
+  Standard_EXPORT Standard_Boolean Wait (const Standard_Integer time, Standard_Address& theResult);
+
   //! Returns ID of the currently controlled thread ID,
   //! or 0 if no thread is run
   Standard_EXPORT Standard_ThreadId GetId() const;
-  
+
   //! Auxiliary: returns ID of the current thread
   Standard_EXPORT static Standard_ThreadId Current();
 
-
-
-
-protected:
-
-
-
-
-
 private:
-
-
 
   OSD_ThreadFunction myFunc;
   OSD_PThread myThread;
   Standard_ThreadId myThreadId;
   Standard_Integer myPriority;
 
-
 };
-
-
-
-
-
-
 
 #endif // _OSD_Thread_HeaderFile
